# Healthcare-AI

./: .gitignore  FINAL_OPTIMIZATION_RESULTS.md  FINAL_SUMMARY.md  HIGH_ACCURACY_ANALYSIS.md  HIGH_ACCURACY_README.md  Hackathon Test - Sheet1 (3).csv  Hackathon Test - Sheet2.csv  IMPROVED_SYSTEM_OPTIMIZATIONS.md  IMPROVEMENTS_ANALYSIS.md  MCP_STATIC_SERVER_ANALYSIS.md  OPTIMIZATION_SUMMARY.md  PDF_Extractor.py  PERFORMANCE_IMPROVEMENTS.md  README.md  README_Enhanced_AI_Options.md  README_Free_Alternatives.md  README_Llama31_Setup.md  README_Thai_Healthcare_QA.md  Raw_Body_MCP.txt  SUMMARY.md  aggressive_mcp_client.py  api_client_readable.py  api_server.py  api_server_debug.py  api_server_fixed.py  api_server_fixed_final.py  api_server_optimized.py  api_server_production.py  api_server_readable.py  api_server_simple.py  chainlang_qa_system.py  cmkl_mcp_client.py  compare_systems.py  comprehensive_mcp_client.py  config_system.py  curl_example.sh  curl_examples.txt  curl_readable.sh  data_manager_refactored.py  debug_mcp_connection.py  (+102 more)
AI/: README_THAI_QA.md  SOLUTION_SUMMARY.md  (+19 more)
Healthcare-AI-Clean/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
Healthcare-AI-Clean/docker/: Dockerfile  docker-compose.yml
Healthcare-AI-Clean/docs/: api.md  architecture.md
Healthcare-AI-Clean/scripts/: batch_processor.py  interactive_qa.py  quick_test.py  setup_database.py
Healthcare-AI-Clean/tests/: conftest.py
Healthcare-AI-Clean/tests/fixtures/: sample_questions.csv
Healthcare-AI-Clean/tests/integration/: test_cache_operations.py  test_csv_processing.py
(+190 files in other folders)
